--- a/.gitignore
+++ b/.gitignore
@@ -1,168 +1,21 @@
-'use client';
-
-import React, { useState } from 'react';
-import { useForm, FormProvider, useFormContext } from 'react-hook-form';
-import { IData } from '@/store/types';
-import { Tabs, TabsContent, TabsList, TabsTrigger } from '@/components/Tabs';
-import FormFactory from './FormFactory';
-import { Email } from "@snb/ds-email";
-import Buttons from './Buttons';
-import { ProgressAlert } from '@snb/ds-progress-alert';
-import { DataDisplay } from "@snb/ds-data-display";
-import { tranformBackEntriesOnValues } from '@/utils';
-import { CustomRadio } from './CustomRadioButtonProps';
-
-
-function DomesticInternacionalTab(data: IData) {
-  const { watch, setValue } = useFormContext();
-
-  const selectedBank = watch('select-contingency') || '';
-
-  if (!data.requestId) {
-    return null;
-  }
-
-  return (
-    <TabsContent value="processing-bank-of-america" className="data-[state=inactive]:hidden">
-      <div className="grid grid-cols-2 gap-8 p-6">
-        <div>
-          {data.messageCutoffTime && (
-            <ProgressAlert
-              isLayoutInLine={true}
-              cardColor="Yellow"
-              height="56px"
-              cardIcon="WarningCircle"
-            >
-              {data.messageCutoffTime}
-            </ProgressAlert>
-          )}
-
-          <h1 className="my-6 text-[#484A55] font-Figtree text-lg font-semibold leading-5 tracking-tighter">
-            Select Bank
-          </h1>
-
-          <div className="flex flex-grow gap-4">
-            <div className="flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow">
-              <CustomRadio
-                name="select-contingency"
-                value="payplus"
-                checked={selectedBank === 'payplus'}
-                onChange={(v) => setValue('select-contingency', v)}
-                label="Payplus"
-              />
-
-
-              <div className="bg-[#008056] text-white font-Figtree text-xs font-semibold py-1 px-2 ml-4 rounded-full">
-                Default
-              </div>
-            </div>
-
-            <div className="flex items-center w-1/3 space-x-2 px-4 py-6 border border-[#D9D9D9] rounded-md flex-grow">
-              <CustomRadio
-                name="select-contingency"
-                value="bofa"
-                checked={selectedBank === 'bofa'}
-                onChange={(v) => setValue('select-contingency', v)}
-                label="Bank of America"
-              />
-
-
-              <div className="bg-[#C75300] text-white font-Figtree text-xs font-semibold py-1 px-2 ml-4 rounded-full">
-                Contingency
-              </div>
-            </div>
-          </div>
-
-          <div className="mt-10">
-            {data.processIntegration && data.processIntegration.length > 0 && (
-              <DataDisplay
-                title="Process Integration: Bank of America"
-                data={[
-                  {
-                    Id: '320923457#-983242|239',
-                    Status: 'processed',
-                    Date: '2025-11-01T11:49:30.2098749-05:00'
-                  }
-                ]}
-              />
-            )}
-          </div>
-        </div>
-
-        <div>
-          <Email senderName="" subjectName="" attachments={[]} message="" />
-        </div>
-      </div>
-
-      <Buttons
-        requestId={data.requestId}
-        initialRequestData={data}
-        data={data.buttons}
-      />
-    </TabsContent>
-  );
-}
-
-function ForeignCurrenciesTab(data: IData) {
-  return (
-    <TabsContent value="processing-bank-of-america" className="data-[state=inactive]:hidden">
-    </TabsContent>
-  );
-}
-
-export default function TabsFactory({ data }: { data: IData }) {
-  const [selectedTab, setSelectedTab] = useState('wire-transfer-form');
-
-  const useFormObject = useForm({
-    defaultValues: {
-      ...tranformBackEntriesOnValues(data.backEntries),
-      select-contingency: 'playplus', 
-    },
-  });
-
-  if (!data) return null;
-
-  const transferType = data.backEntries['transfer-type']?.value;
-
-  const TranferTypeTabs = {
-    'usd-domestic': <DomesticInternacionalTab {...data} />,
-    'usd-internacional': <DomesticInternacionalTab {...data} />,
-    'foreign-currencies': <ForeignCurrenciesTab {...data} />,
-  };
-
-  return (
-    <Tabs className="min-h-screen w-full p-6">
-      <TabsList className="m-0 p-0 pb-4 w-1/2 list-none border-b border-[#DBDBDB] rounded-none justify-start">
-        <TabsTrigger
-          value="wire-transfer-form"
-          className={`p-4 font-body font-Figtree text-base font-normal tracking-tighter underline-from-font decoration-skip-ink-none ${selectedTab === 'wire-transfer-form' ? 'border-b-2 border-blue-500' : ''
-            }`}
-          style={{ color: 'var(--text-light-text-secondary, #636574)' }}
-          onClick={() => setSelectedTab('wire-transfer-form')}
-        >
-          Wire Transfer Form
-        </TabsTrigger>
-
-        <TabsTrigger
-          value="processing-bank-of-america"
-          className={`p-4 font-body font-Figtree text-base font-normal tracking-tighter underline-from-font decoration-skip-ink-none ${selectedTab === 'processing-bank-of-america' ? 'border-b-2 border-blue-500' : ''
-            }`}
-          style={{ color: 'var(--text-light-text-secondary, #636574)' }}
-          onClick={() => setSelectedTab('processing-bank-of-america')}
-        >
-          {transferType === 'usd-domestic' || transferType === 'usd-internacional'
-            ? 'Processing'
-            : 'Processing: Bank of America'}
-        </TabsTrigger>
-      </TabsList>
-
-      <TabsContent forceMount={true} value="wire-transfer-form" className="data-[state=inactive]:hidden">
-        <FormFactory data={data} />
-      </TabsContent>
-
-      <FormProvider {...useFormObject}>
-        {transferType && TranferTypeTabs[transferType as keyof typeof TranferTypeTabs]}
-      </FormProvider>
-    </Tabs>
-  );
+{
+  "$schema": "https://ui.shadcn.com/schema.json",
+  "style": "new-york",
+  "rsc": true,
+  "tsx": true,
+  "tailwind": {
+    "config": "",
+    "css": "src/app/globals.css",
+    "baseColor": "neutral",
+    "cssVariables": true,
+    "prefix": ""
+  },
+  "aliases": {
+    "components": "@/components",
+    "utils": "@/lib/utils",
+    "ui": "@/components/ui",
+    "lib": "@/lib",
+    "hooks": "@/hooks"
+  },
+  "iconLibrary": "lucide"
 }
