--- a/.gitignore
+++ b/.gitignore
@@ -1,287 +1,100 @@
-import styled, { css } from "styled-components";
-
-type CardStyleProps = {
-  border?: boolean;
-  size: "small" | "medium" | "large";
-  weight?: number;
-  cardWidth?: string;
-  cardHeight?: string;
-  cardGap?:string;
-  flex?:string;
-};
-
-type ImgStyleProps = {
-  src?: string;
-  width?: string;
-  height?: string;
-};
-
-export const CardBorder = styled.div<CardStyleProps>`
-  padding: 24px 24px;
-  justify-content: center;
-  justify-items: center;
-  align-items: center;
-  flex: ${({ flex }) => flex ?? "none"};
-
-  &:hover {
-    cursor: pointer;
-  }
-
-  ${({ border }) =>
-    border === true &&
-    css`
-      width: 100%;
-      display: flex;
-      border-radius: 8px;
-      border: 1px solid;
-      background: #ffffff;
-      border-color: #dbdbdb;
-    `}
-  ${({ size, cardWidth, cardHeight }) =>
-    size === "small" &&
-    css`
-      width: ${cardWidth ? cardWidth : `100%`};
-      min-height: 0;
-      height: ${cardHeight ? cardHeight : `100%`};
-      display: block;
-      padding: 12px 16px 12px 16px;
-      border-radius: 8px;
-      background: #ffffff;
-      box-shadow: 0px 1px 2px 0px #2525270f;
-      border: none;
-    `}
-`;
-
-export const CardBody = styled.div<CardStyleProps>`
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: ${({ cardGap }) => cardGap ?? "none"};
-  max-width: 100%;
-
-  ${({ size }) =>
-    size === "small" &&
-    css`
-      justify-content: space-between;
-      flex-direction: row;
-    `}
-`;
-
-export const CardImgDiv = styled.div<ImgStyleProps>`
-  display: flex;
-  justify-content: center;
-  min-width: ${({width})=> width?? "50px"};
-  min-height: ${({height})=> height?? "50px"};
-`;
-
-export const CardImg = styled.img<ImgStyleProps>`
-`;
-
-export const CardText = styled.div<CardStyleProps>`
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 16px 0px;
-  ${({ size }) =>
-    size === "small" &&
-    css`
-      align-items: flex-start;
-      min-width: 112px;
-      padding: 0px;
-    `}
-`;
-
-export const CardTitle = styled.h4<CardStyleProps>`
-  letter-spacing: 0.12px;
-  line-height: 30px;
-  font-weight: 600;
-  font-size: 20px;
-  color: #1e2347;
-  font-family: "Figtree";
-
-  ${({ size }) =>
-    size === "small" &&
-    css`
-      line-height: 21px;
-      font-weight: 400;
-      font-size: 14px;
-      color: #636574;
-      margin: 0px;
-    `}
-`;
-
-export const CardSubTitle = styled.p<CardStyleProps>`
-  font-weight: ${({ weight }) => (weight ? weight : 400)};
-  font-size: 14px;
-  line-height: 21px;
-  letter-spacing: 0.12px;
-  color: #636574;
-  font-family: "Figtree";
-  margin-right: 5px;
-
-  ${({ size }) =>
-    size === "small" &&
-    css`
-      line-height: 24px;
-      font-weight: 600;
-      font-size: 16px;
-      color: #484a55;
-      max-width: calc(100% + 112px);
-      white-space: nowrap;
-      width: 100%;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      margin: 0px;
-    `}
-`;
-
-export const CardInfo = styled.span`
-  font-weight: 500;
-`;
-
-export const CardSubTitleArea = styled.div`
-  display: flex;
-`;
-
-
-
-
-
-
-
-
-import React, { Fragment } from "react";
+import React from "react";
 import Image from "next/image";
-import { Status } from "@snb/ds-status";
-import {
-  CardBody,
-  CardBorder,
-  CardImgDiv,
-  CardSubTitle,
-  CardSubTitleArea,
-  CardText,
-  CardTitle,
-} from "./styles";
 
 export interface CardProps extends React.HTMLAttributes<HTMLDivElement> {
-  border: boolean;
+  border?: boolean;
   size?: "small" | "medium" | "large";
-  cardWidth?: string;
-  cardHeight?: string;
-  cardGap?:string;
-  img?: string;
+  imgSrc?: string;
   imgWidth?: number;
   imgHeight?: number;
-  flex?:string;
   title: string;
-  subTitle?: string;
-  subTitleInfo?: string;
+  subtitle?: string;
+  subtitleInfo?: string;
   status?: {
-    type:
-      | "pending"
-      | "approved"
-      | "partial"
-      | "rejected"
-      | "completed"
-      | undefined;
+    type: "pending" | "approved" | "partial" | "rejected" | "completed";
     text: string;
   };
+  className?: string;
 }
 
+const statusColors = {
+  pending: "bg-yellow-100 text-yellow-800",
+  approved: "bg-green-100 text-green-800",
+  partial: "bg-blue-100 text-blue-800",
+  rejected: "bg-red-100 text-red-800",
+  completed: "bg-gray-100 text-gray-800",
+};
+
 const Card: React.FC<CardProps> = ({
-  border,
+  border = false,
   size = "medium",
-  cardWidth,
-  cardHeight,
-  cardGap,
-  flex,
-  img,
+  imgSrc,
   imgWidth,
   imgHeight,
   title,
-  subTitle,
-  subTitleInfo,
+  subtitle,
+  subtitleInfo,
   status,
+  className = "",
   ...rest
 }) => {
+  const sizeStyles = {
+    small: "p-3 gap-2",
+    medium: "p-4 gap-3",
+    large: "p-6 gap-4",
+  };
+
   return (
-    <Fragment>
-      {size === "small" && (
-        <CardBorder
-          border={border}
-          cardWidth={cardWidth}
-          cardHeight={cardHeight}
-          size={size}
-          flex={flex}          
-          {...rest}
+    <div
+      className={`
+        ${border ? "border border-gray-300 shadow-sm" : "shadow"}
+        ${sizeStyles[size]}
+        rounded-lg bg-white flex items-center justify-between ${className}
+      `}
+      {...rest}
+    >
+      <div className={`flex items-center ${size === "small" ? "gap-2" : "gap-4"}`}>
+        {imgSrc && (
+          <div className="flex-shrink-0">
+            <Image
+              src={imgSrc}
+              width={imgWidth ?? (size === "small" ? 46 : 70)}
+              height={imgHeight ?? (size === "small" ? 46 : 70)}
+              alt="Card image"
+              className="rounded-md"
+            />
+          </div>
+        )}
+        <div className="flex flex-col">
+          <h4 className={`
+              font-semibold text-gray-800 
+              ${size === "small" ? "text-sm" : size === "medium" ? "text-base" : "text-lg"}
+            `}
+          >
+            {title}
+          </h4>
+          {subtitle && (
+            <div className="flex items-center gap-1">
+              <p className="text-gray-600 text-sm">{subtitle}</p>
+              {subtitleInfo && (
+                <span className="text-gray-800 font-medium text-sm">
+                  {subtitleInfo}
+                </span>
+              )}
+            </div>
+          )}
+        </div>
+      </div>
+      {status && (
+        <span
+          className={`py-1 px-3 rounded-full text-xs font-medium ${
+            statusColors[status.type]
+          }`}
         >
-          <CardBody size={size} cardGap={cardGap}>
-            <CardText size={size}>
-              <CardTitle size={size}>{title}</CardTitle>
-              <CardSubTitle size={size}>{subTitle}</CardSubTitle>
-            </CardText>
-            {img && (
-              <CardImgDiv>
-                <Image
-                  src={img ?? ""}
-                  height={imgHeight ?? 46}
-                  width={imgWidth ?? 46}
-                  alt="logo"
-                ></Image>
-              </CardImgDiv>
-            )}
-          </CardBody>
-        </CardBorder>
+          {status.text}
+        </span>
       )}
-      {size === "medium" && (
-        <CardBorder border={border} size={size} {...rest}>
-          <CardBody size={size}>
-            {img && (
-              <CardImgDiv>
-                <Image
-                  src={img ?? ""}
-                  height={imgHeight ?? 70}
-                  width={imgWidth ?? 70}
-                  alt="logo"
-                ></Image>
-              </CardImgDiv>
-            )}
-            <CardText size={size}>
-              <CardTitle size={size}>{title}</CardTitle>
-              <CardSubTitleArea>
-                <CardSubTitle size={size}>{subTitle}</CardSubTitle>
-                <CardSubTitle size={size} weight={600}>
-                  {subTitleInfo}
-                </CardSubTitle>
-              </CardSubTitleArea>
-            </CardText>
-            <Status type={status?.type}>{status?.text}</Status>
-          </CardBody>
-        </CardBorder>
-      )}
-      {size === "large" && (
-        <CardBorder border={border} size={size}>
-          <CardBody size={size}>
-            {img && (
-              <CardImgDiv>
-                <Image
-                  src={img ?? ""}
-                  height={imgHeight ?? 70}
-                  width={imgWidth ?? 70}
-                  alt="logo"
-                ></Image>
-              </CardImgDiv>
-            )}
-            <CardText size={size}>
-              <CardTitle size={size}>{title}</CardTitle>
-              <CardSubTitle size={size}>{subTitle}</CardSubTitle>
-            </CardText>
-            <Status type={status?.type}>{status?.text}</Status>
-          </CardBody>
-        </CardBorder>
-      )}
-    </Fragment>
+    </div>
   );
 };
 
