--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,13 @@
 <input
   type="text"
-  value={initiator}
-  readOnly
-  className="
-    w-full
-    h-[36px]
-    rounded-[4px]
-    border border-gray-300
-    bg-[#F7F7F8]
-    px-[12px] py-[6px]
-    text-sm
-    font-normal
-    text-gray-700
-    leading-[21px]
-    tracking-[0.12px]
-    focus:outline-none
-    focus:ring-2 focus:ring-blue-300
-  "
+  className={`
+    w-full h-[36px] rounded-[4px] border border-gray-300
+    bg-[#F7F7F8] px-[12px] py-[6px] text-sm font-normal text-gray-700
+    leading-[21px] tracking-[0.12px] focus:outline-none focus:ring-2 focus:ring-blue-300
+    ${error ? "border-red-500 focus:ring-red-300" : "border-gray-300 focus:ring-blue-300"}
+  `}
+  placeholder={placeholder}
+  value={value}
+  onChange={handleChange}
+  {...rest}
 />
