--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ interface ClientInfo {
   accountOfficer: string;
 }
 
+
 const mockClientData: ClientInfo = {
   accountName: 'JOHN SMITH ENGINEERING INDUSTRIES S a.r.l.',
   authorizedEmails: [
@@ -31,64 +32,84 @@ const ClientSearch: React.FC = () => {
   };
 
   return (
-    <div className="w-full max-w-[690px] h-auto bg-white rounded-[6px] border border-[#E3E3E3] p-6">
-      <p className="font-figtree font-semibold text-[18px] leading-[27px] tracking-[0.12px] text-[#484A55] mb-4">
+    <div className="h-auto w-full bg-white p-0 rounded-b-md">
+      <p className="font-figtree font-semibold text-[18px] leading-[27px] tracking-[0.12px] text-[#484A55]">
         Client Information
       </p>
+      <div className="max-w-lg mx-auto mt-4 bg-white rounded-md border border-[#DBDBDB] shadow">
+        <div className="grid grid-cols-2 gap-4 p-6 ">
+          <div className="">
+            <label className="block font-figtree font-normal text-[14px] leading-[21px] tracking-[0.12px] text-gray-700">Initiator *</label>
+            <input
+              type="text"
+              value={initiator}
+              readOnly
+              className="   w-full
+                          h-[36px]
+                          rounded-[4px]
+                          border border-gray-300
+                          bg-[#F7F7F8]
+                          px-[12px] py-[6px]
+                          text-sm
+                          font-normal
+                          text-gray-700
+                          leading-[21px]
+                          tracking-[0.12px]
+                          focus:outline-none
+                          focus:ring-2 focus:ring-blue-300"
+            />
+          </div>
+          <div>
+            <label className="block font-figtree font-normal text-[14px] leading-[21px] tracking-[0.12px] text-gray-700">
+              CIF or Account Number *
+            </label>
+            <Search
+              placeholder="Search Account Number"
+              suggestions={["ABC1234"]}
+              onSelect={handleSearchSelect}
+            />
+          </div>
+        </div>
 
-      <div className="grid grid-cols-2 gap-4">
-        <div>
-          <label className="block font-figtree font-normal text-[14px] leading-[21px] tracking-[0.12px] text-[#636574]">
-            Initiator *
-          </label>
-          <input
-            type="text"
-            value={initiator}
-            readOnly
-            className="mt-1 w-full h-[36px] rounded-[4px] border border-[#D2D5DA] bg-[#F7F7F8] px-[12px] py-[6px] text-sm font-normal text-[#484A55] focus:outline-none"
-          />
-        </div>
-        <div>
-          <label className="block font-figtree font-normal text-[14px] leading-[21px] tracking-[0.12px] text-[#636574]">
-            CIF or Account Number *
-          </label>
-          <Search
-            placeholder="Search Account Number"
-            suggestions={["ABC1234"]}
-            onSelect={handleSearchSelect}
-          />
-        </div>
+
+        {clientInfo && (
+          <>
+            <div className='relative flex justify-center items-center my-[11px]'>
+              <div className='w-full h-px bg-[#E3E3E3]' />
+              <div className='absolute top-[-6px] w-3 h-3 bg-white-l border-[#E3E3E3] rotate-45' />
+            </div>
+
+            <div className="border border-gray-200 rounded-b-md bg-gray-50 p-6">
+              <p className="block font-figtree font-normal text-[14px] leading-[21px] tracking-[0.12px] text-gray-700">
+                Account Name:
+                <strong>
+                  {clientInfo.accountName}
+                </strong>
+              </p>
+              <div className="w-full h-px bg-[#E5E5E5] my-[11px] mt-4"></div>
+              <p className="block font-figtree font-normal text-[14px] leading-[21px] tracking-[0.12px] text-gray-700">Authorized Email(s):</p>
+              <div className="flex flex-wrap gap-2 mt-3">
+                {clientInfo.authorizedEmails.map((email, index) => (
+                  <span
+                    key={index}
+                    className="bg-gray-200 rounded-full px-3 py-1 text-sm"
+                  >
+                    {email}
+                  </span>
+                ))}
+              </div>
+              <div className="w-full h-px bg-[#E5E5E5] my-[11px] mt-4"></div>
+              <p className="block font-figtree font-normal text-[14px] leading-[21px] tracking-[0.12px] text-gray-700">KYC Comments:<strong>&nbsp;&nbsp;
+                {clientInfo.kycComments}</strong></p>
+              <div className="w-full h-px bg-[#E5E5E5] my-[11px] mt-4"></div>
+              <p className="block font-figtree font-normal text-[14px] leading-[21px] tracking-[0.12px] text-gray-700">
+                <span className="font-semibold">Account Officer:</span> <strong>&nbsp;{clientInfo.accountOfficer}</strong>
+              </p>
+            </div>
+          </>
+
+        )}
       </div>
-
-      {clientInfo && (
-        <div className="mt-6 border-t border-[#E3E3E3] pt-4">
-          <p className="font-figtree text-[14px] text-[#636574] mb-2">
-            <span className="font-semibold text-[#484A55]">Account Name:</span> {clientInfo.accountName}
-          </p>
-
-          <p className="font-figtree text-[14px] text-[#636574] mb-2 font-semibold">Authorized Email(s):</p>
-          <div className="flex flex-wrap gap-2 mb-4">
-            {clientInfo.authorizedEmails.map((email, index) => (
-              <span
-                key={index}
-                className="bg-[#F3F3F3] rounded-full px-3 py-1 text-[13px] font-figtree text-[#484A55]"
-              >
-                {email}
-              </span>
-            ))}
-          </div>
-
-          <p className="font-figtree text-[14px] text-[#636574] font-semibold mb-1">KYC Comments:</p>
-          <p className="font-figtree text-[13px] text-[#636574] mb-4">{clientInfo.kycComments}</p>
-
-          <div className="flex items-center gap-2">
-            <span className="text-[#484A55]">📎</span>
-            <p className="font-figtree text-[14px] text-[#636574]">
-              <span className="font-semibold text-[#484A55]">Account Officer:</span> {clientInfo.accountOfficer}
-            </p>
-          </div>
-        </div>
-      )}
     </div>
   );
 };
